Hinzufügen von eigenen Bildern für Heizung und Puffer. Erstellen einer Seite um das System neu zu starten oder runter zu fahren.

--- a/Web/index.html
+++ b/Web/index.html
@@ -90,7 +90,7 @@
           <!-- <li><a href="ajax/content1.html"><span>Tab 1</span></a></li> -->
           <li><a href="ds18b20.html"><span>Temperaturen</span></a></li>
           <li><a href="config.html"><span>Konfig</span></a></li>
-          <li><a href="log.html"><span>Log</span></a></li>
+          <li><a href="system.html"><span>System</span></a></li>
         </ul>
         <div id="loading-indicator" style="margin:auto;width:100%;" class=""></div>
         <div id="tabs-1">
